Fix Lecture 1 references

--- a/references.bib
+++ b/references.bib
@@ -520,9 +520,121 @@
   year=1998
 }
 
+@book{alchian1972,
+  title="University economics: Elements of inquiry",
+  author="AA Alchian and WR Allen",
+  publisher="Wadsworth Publishing Company",
+  location="USA",
+  year=1972
+}
 
+@book{case2017,
+  title="Principles of Economics (Twelfth Edition) (Global Edition)",
+  author="KE Case and RC Fair and SM Oster",
+  publisher="Pearson Education",
+  location="Italy",
+  year=2017
+}
 
+@book{frank2006,
+  title="Microeconomics and behavior (sixth edition)",
+  author="RH Frank",
+  publisher="McGraw-Hill",
+  location="USA",
+  year=2006
+}
 
+@book{gans2018,
+  title="Principles of microeconomics (seventh Asia-Pacific edition)",
+  author="J Gans and S King and NG Mankiw",
+  publisher="Cengage Learning Australia",
+  location="China",
+  year=2018
+}
+
+@book{gravelle2004,
+  title="Microeconomics (third edition)",
+  author="H Gravelle and R Rees",
+  publisher="Pearson Education",
+  location="United Kingdom",
+  year=2004
+}
+
+@book{heyne2000,
+  title="A student’s guide to economics",
+  author="P Heyne",
+  publisher="Intercollegiate Studies Institute (ISI) Books",
+  location="USA",
+  year=2000,
+  note="Edited by JA Eglarz"
+}
+
+@book{heyne2014,
+  title="The economic way of thinking (thirteenth edition)",
+  author="PL Heyne and PJ Boettke and DL Prychitko",
+  publisher="Pearson Education",
+  location="USA",
+  year=2014,
+  note="The Pearson New International Edition"
+}
+
+@book{kunimoto2010,
+  title="Lecture notes on mathematics for economists",
+  author="T Kunimoto",
+  publisher="Unpublished, McGill University",
+  location="Canada",
+  year=2010
+}
+
+@book{malinvaud1972,
+  title="Lectures on microeconomic theory",
+  author="E Malinvaud",
+  publisher="North Holland Publishing Company",
+  location="Scotland",
+  year=1972,
+  note="Advanced Textbooks in Economics Volume 2; Translated by Mrs. A. Silvey"
+}
+
+@book{mankiw2003,
+  title="Macroeconomics (fifth edition)",
+  author="NG Mankiw",
+  publisher="Worth Publishers",
+  location="USA",
+  year=2003
+}
+
+@book{perloff2014,
+  title="Microeconomics with calculus (third edition) (global edition)",
+  author="JM Perloff",
+  publisher="Pearson Education Limited",
+  location="USA",
+  year=2014
+}
+
+@book{robbins1984,
+  title="An essay on the nature and significance of economic science (third edition)",
+  author="LC Robbins",
+  publisher="New York University Press",
+  location="Hong Kong",
+  year=1984,
+  note="With a foreword by WJ Baumol. The first edition of this book was published in 1932."
+}
+
+@book{vohra2005,
+  title="Advanced mathematical economics",
+  author="RV Vohra",
+  publisher="Routledge",
+  location="The United Kingdom",
+  year=2005
+}
+
+@book{waud1989,
+  title="Macroeconomics (Australian edition)",
+  author="RN Waud and P Maxwell and J Bonnici",
+  publisher="Harper and Row Publishers",
+  location="Australia",
+  year=1989
+}
 
 
 
