Move bibliography to separate page

--- a/references.bib
+++ b/references.bib
@@ -546,7 +546,7 @@
 
 @book{gans2018,
   title="Principles of microeconomics (seventh Asia-Pacific edition)",
-  author="J Gans and S King and NG Mankiw",
+  author="J Gans and S King and N Byford and NG Mankiw",
   publisher="Cengage Learning Australia",
   location="China",
   year=2018
