Move reading guides to the top of each page and make SHSC the primary reading

--- a/references.bib
+++ b/references.bib
@@ -328,7 +328,7 @@
 
 @article{mann1943,
   title="Quadratic forms with linear constraintss",
-  author="DM Mandy",
+  author="HB Mann",
   journal="The American Mathematical Monthly",
   volume="50",
   number="7",
