--- a/references.bib
+++ b/references.bib
@@ -636,8 +636,13 @@
   year=1989
 }
 
-
-
+@book{sydsaeter2005,
+  title="Further mathematics for economic analysis",
+  author="K Sydsæter and P Hammond and A Seierstad and A Strøm",
+  publisher="Prentice-Hall / Financial Times (Pearson)",
+  location="United Kingdom",
+  year=2005
+}
 
 
 
