--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -122,7 +122,7 @@ The system of real numbers is an algebraic structure known as a **complete order
 
 The system of real numbers is formally denoted by $(\mathbb{R}, \mathbb{R}_{++}, +, \times)$, where $+$ and $\times$ are the familiar addition and multiplication operations for real numbers.
 
-The set of real numbers $\mathbb{R}$ can be viewed as the completion of the the set of rational numbers $\mathbb{Q}$ because it involves filling in the “holes” that exist in the set of rational numbers. These holes take the form of irrational numbers like $\sqrt{2}$, $\pi$ and $e$.
+The set of real numbers $\mathbb{R}$ can be viewed as the completion of the set of rational numbers $\mathbb{Q}$ because it involves filling in the “holes” that exist in the set of rational numbers. These holes take the form of irrational numbers like $\sqrt{2}$, $\pi$ and $e$.
 
 ### Why aren't the rationals enough?
 Why aren’t the rational numbers enough? What makes us think that they contain “holes”? This is a very good question. Especially when you realise that any numerical calculation on a computer will only generate a rational number.
