Updates to references

--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -2,27 +2,29 @@
 
 ## Sources and reading guide
 
-```{dropdown} Sources and reading guide
+````{dropdown} Sources and reading guide
 
-The primary readings for this lecture are:
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
 
-{cite:ps}`sydsaeter2016`: Chapters 1.1, 2.1, and 5.5 (pp. 1–12, 19–22, and 160–163).
+Chapters 1.1, 2.1, and 5.5 (pp. 1–12, 19–22, and 160–163).
+<div style="clear: both"></div>
 
-Other sources/readings are below.
-
-Introductory level references:
+Additional reading (introductory level):
 - {cite:ps}`haeussler1987`: Chapter 0.2 (pp. 1-3).
 - {cite:ps}`shannon1995`: Chapter 1.2 and 1.3 (pp.2–11).
 
-More advanced references:
+Additional reading (more advanced level):
 - {cite:ps}`banks2009`
 - {cite:ps}`corbae2009`: Chapters 1 and 2 (pp. 1-71).
 - {cite:ps}`halmos1960`
 - {cite:ps}`kolmogorov1970`: Chapter 1 (pp. 1-36).
 - {cite:ps}`simon1994`: Appendix A1 (pp. 847-858).
 
-```
-
+````
 
 
 
