Last edits for the first lecture

--- a/01.intro_to_economics.md
+++ b/01.intro_to_economics.md
@@ -14,9 +14,7 @@ kernelspec:
 
 # An introduction to economics
 
-## Sources and reading guide
-
-```{dropdown} Sources and reading guide
+```{dropdown} References
 
 - {cite:ps}`alchian1972`: Chapters 1, 2, 3, 4, and 20 (pp. 2–52 and 384–404).
 - {cite:ps}`alchian1983`: Chapter 1 (pp. 1–12).
