Venn diagrams look good

--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -336,7 +336,7 @@ v.get_label_by_id('10').set_text('')
 v.get_label_by_id('01').set_text('')
 v.get_label_by_id('11').set_text('')
 
-c = venn2_circles(subsets=(1, 1, 1), linestyle = 'dashed')
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
 
 # Style options
 plt.title("Union of two overlapping sets")
@@ -363,7 +363,7 @@ v.get_label_by_id('10').set_text('')
 v.get_label_by_id('01').set_text('')
 v.get_label_by_id('11').set_text('$A \; ∩ \; B$')
 
-c = venn2_circles(subsets=(1, 1, 1), linestyle = 'dashed')
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
 
 # Style options
 plt.title("Intersection of two sets")
@@ -372,7 +372,7 @@ plt.title("Intersection of two sets")
 cols, texts = [],[]
 cols.append(v.get_patch_by_id('11'))
 texts.append(v.get_label_by_id('11')._text)
-plt.legend(handles=cols, labels=texts)
+plt.legend(handles=cols, labels=texts, loc='upper right')
 
 plt.show()
 ```
@@ -390,7 +390,7 @@ v = venn2(subsets=(1, 1, 0))
 v.get_label_by_id('10').set_text('')
 v.get_label_by_id('01').set_text('')
 
-c = venn2_circles(subsets=(1, 1, 0), linestyle = 'dashed')
+c = venn2_circles(subsets=(1, 1, 0), linestyle = 'solid')
 
 # Style options
 plt.title("Intersection of disjoint sets is the empty set")
@@ -448,7 +448,7 @@ v.get_label_by_id('10').set_text('A \\ B')
 v.get_label_by_id('01').set_text('B \\ A')
 v.get_label_by_id('11').set_text('$A \; ∩ \; B$')
 
-c = venn2_circles(subsets=(1, 1, 1), linestyle = 'dashed')
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
 
 # Style options
 plt.title("Set difference")
@@ -458,7 +458,7 @@ cols, texts = [],[]
 for i in ('10', '01', '11'):
     cols.append(v.get_patch_by_id(i))
     texts.append(v.get_label_by_id(i)._text)
-plt.legend(handles=cols, labels=texts)
+plt.legend(handles=cols, labels=texts, loc='upper right')
 
 plt.show()
 ```
@@ -584,7 +584,7 @@ v.get_patch_by_id('01').set_color('lightcoral')
 v.get_patch_by_id('10').set_color('lightcoral')
 
 
-c = venn2_circles(subsets=(1, 1, 1), linestyle = 'dashed')
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
 
 # Style options
 plt.title("Symmetric difference")
@@ -595,7 +595,7 @@ cols.append(v.get_patch_by_id('11'))
 texts.append(v.get_label_by_id('11')._text)
 cols.append(v.get_patch_by_id('10'))
 texts.append('$A \; △ \; B$')
-plt.legend(handles=cols, labels=texts)
+plt.legend(handles=cols, labels=texts, loc='upper right')
 
 plt.show()
 
