Edits to 02. synced from main

--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -1,3 +1,16 @@
+---
+jupytext:
+  formats: md:myst
+  text_representation:
+    extension: .md
+    format_name: myst
+kernelspec:
+  display_name: Python 3
+  language: python
+  name: python3
+---
+
+
 # Sets, numbers, coordinates, and distances
 
 ## Sources and reading guide
@@ -295,19 +308,104 @@ All distance metrics must satisfy a number of properties to ensure that they are
 Suppose that U is some universal set, $X \subseteq U$ and $Y \subseteq U$. 
 
 The **union** of $X$ and $Y$, which is denoted by $X \cup Y$, is the set 
-```{math}
+
+$$
 X \cup Y = \{a \in U : a \in X \text{ or } a \in Y\}
-```
+$$
+
 Note that the “or” in this definition is not exclusive. If the element $a$ belongs to either $X$ only, or $Y$ only, or both $X$ and $Y$ , then $a \in X \cup Y$. 
 
 The **intersection** of $X$ and $Y$, which is denoted by $X \cap Y$, is the set
-```{math}
+
+$$
 X \cap Y = \{a \in U : a \in X \text{ and } a \in Y\}
-```
+$$
 
 If $X \cap Y = \varnothing$, then the sets $X$ and $Y$ are said to be **disjoint**.
 
-*Illustrate set union and set intersection on the whiteboard using Venn diagrams for both the case of disjoint sets and the case of overlapping sets.*
+#### Venn diagram: union of two (overlapping) sets
+In this example, the red, brown and green areas are all part of $A \cup B$ (the union of set $A$ (the left circle) and set $B$ (the right circle).
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+
+v = venn2(subsets=(1, 1, 1))
+v.get_label_by_id('10').set_text('')
+v.get_label_by_id('01').set_text('')
+v.get_label_by_id('11').set_text('')
+
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
+
+# Style options
+plt.title("Union of two overlapping sets")
+
+# Add bracket showing the union of the two sets
+plt.annotate('A ∪ B', xy=(0.5, 0), xytext=(0.5, -0.1), xycoords='axes fraction', 
+            fontsize=16, ha='center', va='top',
+            bbox=dict(boxstyle='square', fc='white', color='k'),
+            arrowprops=dict(arrowstyle='-[, widthB=9.5, lengthB=0.5', lw=2.0, color='k'))
+
+plt.show()
+```
+
+#### Venn diagram: intersection of two overlapping sets
+The intersection of the two sets, $A \cap B$, is the brown area.
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+
+v = venn2(subsets=(1, 1, 1))
+v.get_label_by_id('10').set_text('')
+v.get_label_by_id('01').set_text('')
+v.get_label_by_id('11').set_text('$A \; ∩ \; B$')
+
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
+
+# Style options
+plt.title("Intersection of two sets")
+
+# Add legend
+cols, texts = [],[]
+cols.append(v.get_patch_by_id('11'))
+texts.append(v.get_label_by_id('11')._text)
+plt.legend(handles=cols, labels=texts, loc='upper right')
+
+plt.show()
+```
+
+#### Venn diagram: intersection of two disjoint sets
+In this diagram, $A$ and $B$ are disjoint sets.  Therefore, $A \cap B = \varnothing$.
+
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+
+v = venn2(subsets=(1, 1, 0))
+v.get_label_by_id('10').set_text('')
+v.get_label_by_id('01').set_text('')
+
+c = venn2_circles(subsets=(1, 1, 0), linestyle = 'solid')
+
+# Style options
+plt.title("Intersection of disjoint sets is the empty set")
+
+# Add legend
+cols, texts = [],[]
+for i in ('10', '01'):
+    cols.append(v.get_patch_by_id(i))
+    texts.append(v.get_label_by_id(i)._text)
+# plt.legend(handles=cols, labels=texts)
+
+plt.show()
+```
+
+
 
 #### Examples
 ```{figure} _static/img/lecture_02/union_example.png
@@ -324,6 +422,8 @@ Examples: union
 Examples: intersection
 ```
 
+
+
 ### Exclusion and complementation
 Suppose that U is some universal set, $X \subseteq U$ and $Y \subseteq U$. 
 
@@ -335,7 +435,98 @@ X \setminus Y = \{a \in X : a \notin Y \}
 Set complementation is a special case of set exclusion. The **complement** of the set $X$, which is denoted by $X^C$ , is defined as $X^C = U \setminus X$.
 - Note that $X \cup X^C = U$ and $X \cap X^C = \varnothing$.
 
-*Illustrate set exclusion and set complementation on the whiteboard using Venn diagrams for both the case of disjoint sets and the case of overlapping sets.*
+
+#### Venn diagram: set difference
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+
+v = venn2(subsets=(1, 1, 1))
+v.get_label_by_id('10').set_text('A \\ B')
+v.get_label_by_id('01').set_text('B \\ A')
+v.get_label_by_id('11').set_text('$A \; ∩ \; B$')
+
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
+
+# Style options
+plt.title("Set difference")
+
+# Add legend
+cols, texts = [],[]
+for i in ('10', '01', '11'):
+    cols.append(v.get_patch_by_id(i))
+    texts.append(v.get_label_by_id(i)._text)
+plt.legend(handles=cols, labels=texts, loc='upper right')
+
+plt.show()
+```
+
+
+#### Venn diagram: set complementation
+Notice that the large rectangle containing both $A$ and $A^C$ is labelled $U$, the universal set.
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+from matplotlib.patches import Rectangle, Circle
+
+fig, ax = plt.subplots()
+
+
+
+ax.add_patch(Rectangle((-0.7, -0.5), 1.4, 1,
+                       fc='lightblue',
+                       alpha=0.8,
+                       color='none',
+                       linewidth=5))
+
+
+ax.add_patch(Rectangle((-0.7, -0.5), 1.4, 1,
+                       fc='none',
+                       alpha=0.8,
+                       color='black',
+                       linewidth=3))
+
+
+ax.add_patch(Circle((0, 0), 0.4,
+                       fc='lightcoral',
+                       alpha=0.8,
+                       color='black',
+                       linewidth=2,
+                   linestyle='dashed'))
+
+v = venn2(subsets=(1, 1, 1))
+for i in ('10', '01', '11'):
+    v.get_patch_by_id(i).set_alpha(0)
+    v.get_label_by_id(i).set_text('')
+
+v.get_label_by_id('A').set_text('')
+v.get_label_by_id('B').set_text('')
+    
+# Style options
+plt.title("Set complementation")
+
+plt.text(0.65, 0.53, 'U', fontsize=15)
+plt.text(-0.05, 0, '$A$', fontsize=15)
+plt.text(0.4, 0.3, '$A^C$', fontsize=15)
+
+cols, texts = [],[]
+cols.append(ax.patches[2])
+texts.append('$A$')
+cols.append(ax.patches[0])
+texts.append('$A^C$')
+
+plt.legend(handles=cols, labels=texts, loc='lower right',
+           bbox_to_anchor=(1, -0.15))
+
+
+plt.show()
+```
+
+
 
 #### Examples
 ```{figure} _static/img/lecture_02/exclusion_example.png
@@ -364,6 +555,7 @@ The elements of this power set are the subsets of the universal set. The complem
 - $U^C = \varnothing$
 ````
 
+
 ### Symmetric difference
 The **symmetric difference** of $X$ and $Y$, which is denoted by $X \bigtriangleup Y$, is
 the set
@@ -375,7 +567,41 @@ It is interesting to compare the operations of union and symmetric difference. T
 - The set $X \cup Y$ consists of all elements that are either in set $X$ only, or in set $Y$ only, or in both of these sets.
 - The set $X \bigtriangleup Y$ consists of all elements that are either in set $X$ only, or in set $Y$ only, but are not in both of these sets.
 
-*Illustrate the symmetric difference on the whiteboard using Venn diagrams for both the case of disjoint sets and the case of overlapping sets.*
+#### Venn diagram: symmetric difference
+Note that the areas in light red together comprise the symmetric difference.
+
+```{code-cell} ipython3
+:tags: ["hide-input", "full-width"]
+from matplotlib import pyplot as plt
+from matplotlib_venn import venn2, venn2_circles
+
+v = venn2(subsets=(1, 1, 1))
+v.get_label_by_id('10').set_text('')
+v.get_label_by_id('01').set_text('')
+v.get_label_by_id('11').set_text('$A \; ∩ \; B$')
+
+v.get_patch_by_id('01').set_color('lightcoral')
+v.get_patch_by_id('10').set_color('lightcoral')
+
+
+c = venn2_circles(subsets=(1, 1, 1), linestyle = 'solid')
+
+# Style options
+plt.title("Symmetric difference")
+
+# Add legend
+cols, texts = [],[]
+cols.append(v.get_patch_by_id('11'))
+texts.append(v.get_label_by_id('11')._text)
+cols.append(v.get_patch_by_id('10'))
+texts.append('$A \; △ \; B$')
+plt.legend(handles=cols, labels=texts, loc='upper right')
+
+plt.show()
+
+```
+
+
 
 #### Example
 ```{figure} _static/img/lecture_02/symmetric_difference_example.png
