Adding Wason selection task (lecture 1)

--- a/01.intro_to_economics.md
+++ b/01.intro_to_economics.md
@@ -12,7 +12,7 @@ kernelspec:
   name: python3
 ---
 
-# An introduction to economics
+# 📖 Mathematical economics
 
 ```{dropdown} References
 
@@ -191,7 +191,7 @@ Circular flow example 3: households, firms and financial markets
 Circular flow example 4: households, firms, financial markets and government
 ```
 
-### The three main components of mathematical (micro-)economics
+### The three main components of mathematical economics
 Takashi Kunimoto (Unpublished lecture notes on mathematical economics, 18 May 2010, page 6) notes that, according to Rakesh Vohra (2005, Preface), the three core technical components that underlie much of economic theory are as follows.
 - Feasibility questions
 - Optimality questions
