--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -11,7 +11,7 @@ kernelspec:
 ---
 
 
-# Sets, numbers, coordinates, and distances
+# 📖 Sets, numbers, coordinates, and distances
 
 ## Sources and reading guide
 
