--- a/01.intro_wason.md
+++ b/01.intro_wason.md
@@ -54,7 +54,7 @@ Let's play Wason Selection Task at [Mentimeter](https://www.menti.com/alk6yjg64g
 :class: caution
 
 $\implies$ denotes **logical implication**:  
-If whenever logical statment $P$ is true, $Q$ is also true, is written $P \implies Q$.
+If whenever logical statment $P$ is true, $Q$ is also true, we write $P \implies Q$.
 ```
 
 - the rule we are checking is $P \implies Q$
