Small edits in Wason exercise

--- a/01.intro_wason.md
+++ b/01.intro_wason.md
@@ -48,6 +48,13 @@ Let's play Wason Selection Task at [Mentimeter](https://www.menti.com/alk6yjg64g
 | Odd | Blue | False | True | Yes |
 | Odd | Red | False | False | Yes |
 
+- the rule we are checking is $P \implies Q$
+- it is only broken in case $P$ is True and $Q$ is False
+- therefore the two cards that have to be flipped are 
+    - Even, $P$ is True
+    - Red, $Q$ is False
+
+
 ````
 
 ```{admonition} Definition
@@ -56,12 +63,6 @@ Let's play Wason Selection Task at [Mentimeter](https://www.menti.com/alk6yjg64g
 $\implies$ denotes **logical implication**:  
 If whenever logical statment $P$ is true, $Q$ is also true, we write $P \implies Q$.
 ```
-
-- the rule we are checking is $P \implies Q$
-- it is only brocken in case $P$ is True and $Q$ is False
-- therefore the two cards that have to be flipped are 
-    - Even, $P$ is True
-    - Red, $Q$ is False
 
 ```{dropdown} Further reading and self-learning
 - Each lecture will suggest some material for further reading and learning
